Compiler/parser.y
%{
#include <stdlib.h>
#include <stdio.h>
#include "asm_table.h"
#include "ts.h"
int var[24];
void yyerror(char *s);
%}

%union { int nb ; char str[24];}
%token tMAIN tPRINTF tRETURN  tIF tELSE tWHILE tTRUE tFALSE
%token tOP tCP tOB tCB 
%token tCONST tINT tCOM tSC
%token tADD tSUB tMUL tDIV tEQ tINF tSUP tEQUAL tDIF tAND tOR
%token tCOMMENT
%token <nb> tNB
%token <str> tID
%type <nb> Arith_Expr Factor Term Condition Bool_Expr
%start Program

%%

Program : tINT tID tOP tCP Body ;

Body : tOB Content tCB ;

Content : | Instruction Content ;

Instruction : Declaration
            | Affectation 
            | LoopIf;     



/*************************************************************************/
/***************************** DECLARATIONS ******************************/
/*************************************************************************/

Declaration : tINT DecNext tSC ; 


DecNext : tID tCOM DecNext { 
                if (ts_exists_sym($1)){
                    fprintf(stderr,"The variable already exists\n");
                    return 1;
                } else { 
                    ts_add_sym($1, "int");} 
                } ;
                
DecNext : tID { 
                if (ts_exists_sym($1)){
                    fprintf(stderr,"The variable already exists\n");
                    return 1;
                }else { 
                    ts_add_sym($1, "int");}
                } ; 
                
DecNext : tID tEQ   { if (ts_exists_sym($1)){
                        fprintf(stderr,"The variable already exists\n");
                        return 1;
                    } else { 
                        ts_add_sym($1, "int");}
                    }                
                    Arith_Expr {
                        asm_add_copy(ts_get_addr($1)); 
                        ts_init($1);
                    } ; 





/*************************************************************************/
/***************************** AFFECTATIONS ******************************/
/*************************************************************************/

Affectation : tID tEQ Arith_Expr tSC { 
                                asm_add_copy(ts_get_addr($1)); 
                                ts_init($1);
                                };



/*************************************************************************/
/******************************** LOOP IF ********************************/
/*************************************************************************/
LoopIf : tIF tOP Condition tCP Body IfNext ; 
IfNext : | tELSE Body
         | tELSE tIF tOP Condition tCP Body IfNext ; 


/*************************************************************************/
/****************************** LOOP WHILE *******************************/
/*************************************************************************/
LoopWhile : tWHILE tOP Condition tCP Body ; 


/*************************************************************************/
/*********************** EXPRESSIONS ARITHMETIQUES ***********************/
/*************************************************************************/

Arith_Expr : Factor {
                $$ = $1;
            } 
            | Arith_Expr tADD Factor {
                ts_free_tmp();
                ts_add_tmp();
                asm_add_arith(ADD);
                $$ = ts_get_last_addr();
            }  
            | Arith_Expr tSUB Factor {
                ts_free_tmp();
                ts_add_tmp();
                asm_add_arith(SUB);
                $$ = ts_get_last_addr();
            } ; 

Factor : Term {
            $$ = $1 ;
        } 
        | Factor tMUL Term {
            ts_free_tmp();
            ts_add_tmp();
            asm_add_arith(MUL);
            $$=ts_get_last_addr();
        } 
        | Factor tDIV Term {
            ts_free_tmp();
            ts_add_tmp();
            asm_add_arith(DIV);
            $$=ts_get_last_addr();
        } ;  

Term : tNB {
            ts_add_tmp();
            asm_add_instr2(AFC, ts_get_last_addr(), $1);
            $$ = $1;
        }  
      | tID {
            ts_add_tmp();
            asm_add_instr2(COP, ts_get_last_addr(), ts_get_addr($1));
            $$ = $1;
        }  
      | tOP Arith_Expr tCP ;   


/*************************************************************************/
/************************* EXPRESSIONS BOOLEENNES ************************/
/*************************************************************************/ 
Condition : Bool_Expr {
                $$ = $1;
            } 
           | Bool_Expr tAND Bool_Expr {
               ts_free_tmp();
               ts_add_tmp();
               asm_add_arith(AND);
               $$ = ts_get_last_addr();
           } 
           | Bool_Expr tOR Bool_Expr {
               ts_free_tmp();
               ts_add_tmp();
               asm_add_arith(OR);
               $$ = ts_get_last_addr();
           } ;

Bool_Expr : tTRUE {
                $$ = 1;
            }    
           | tFALSE {
               $$ = 0;
           } 
           | Arith_Expr tINF Arith_Expr {
                ts_free_tmp();
                ts_add_tmp();
                asm_add_arith(INF);
                $$ = ts_get_last_addr();
           } 
           | Arith_Expr tSUP Arith_Expr {
                ts_free_tmp();
                ts_add_tmp();
                asm_add_arith(SUP);
                $$ = ts_get_last_addr();
           } 
           | Arith_Expr tDIF Arith_Expr {
                ts_free_tmp();
                ts_add_tmp();
                asm_add_arith(DIF);
                $$ = ts_get_last_addr();
           } 
           | Arith_Expr tEQUAL Arith_Expr {
                ts_free_tmp();
                ts_add_tmp();
                asm_add_arith(EQU);
                $$ = ts_get_last_addr();
           } ;     


%%

void yyerror(char *s){
    fprintf(stderr, "%s",s);
    exit(1);
}
