Compiler/y.output
Terminaux inutilisés dans la grammaire

    tMAIN
    tPRINTF
    tRETURN
    tIF
    tELSE
    tWHILE
    tTRUE
    tFALSE
    tCONST
    tINF
    tSUP
    tEQUAL
    tDIF
    tAND
    tOR
    tCOMMENT


Grammaire

    0 $accept: Program $end

    1 Program: tINT tID tOP tCP Body

    2 Body: tOB Content tCB

    3 Content: %empty
    4        | Instruction Content

    5 Instruction: Declaration
    6            | Affectation

    7 Declaration: tINT DecNext tSC

    8 DecNext: tID tCOM DecNext
    9        | tID

   10 $@1: %empty

   11 DecNext: tID tEQ $@1 Arith_Expr

   12 Affectation: tID tEQ Arith_Expr tSC

   13 Arith_Expr: Factor
   14           | Arith_Expr tADD Factor
   15           | Arith_Expr tSUB Factor

   16 Factor: Term
   17       | Factor tMUL Term
   18       | Factor tDIV Term

   19 Term: tNB
   20     | tID
   21     | tOP Arith_Expr tCP


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    tMAIN (258)
    tPRINTF (259)
    tRETURN (260)
    tIF (261)
    tELSE (262)
    tWHILE (263)
    tTRUE (264)
    tFALSE (265)
    tOP (266) 1 21
    tCP (267) 1 21
    tOB (268) 2
    tCB (269) 2
    tCONST (270)
    tINT (271) 1 7
    tCOM (272) 8
    tSC (273) 7 12
    tADD (274) 14
    tSUB (275) 15
    tMUL (276) 17
    tDIV (277) 18
    tEQ (278) 11 12
    tINF (279)
    tSUP (280)
    tEQUAL (281)
    tDIF (282)
    tAND (283)
    tOR (284)
    tCOMMENT (285)
    tNB <nb> (286) 19
    tID <str> (287) 1 8 9 11 12 20


Non-terminaux, suivis des règles où ils apparaissent

    $accept (33)
        à gauche: 0
    Program (34)
        à gauche: 1
        à droite: 0
    Body (35)
        à gauche: 2
        à droite: 1
    Content (36)
        à gauche: 3 4
        à droite: 2 4
    Instruction (37)
        à gauche: 5 6
        à droite: 4
    Declaration (38)
        à gauche: 7
        à droite: 5
    DecNext (39)
        à gauche: 8 9 11
        à droite: 7 8
    $@1 (40)
        à gauche: 10
        à droite: 11
    Affectation (41)
        à gauche: 12
        à droite: 6
    Arith_Expr <nb> (42)
        à gauche: 13 14 15
        à droite: 11 12 14 15 21
    Factor <nb> (43)
        à gauche: 16 17 18
        à droite: 13 14 15 17 18
    Term <nb> (44)
        à gauche: 19 20 21
        à droite: 16 17 18


État 0

    0 $accept: . Program $end

    tINT  décalage et aller à l'état 1

    Program  aller à l'état 2


État 1

    1 Program: tINT . tID tOP tCP Body

    tID  décalage et aller à l'état 3


État 2

    0 $accept: Program . $end

    $end  décalage et aller à l'état 4


État 3

    1 Program: tINT tID . tOP tCP Body

    tOP  décalage et aller à l'état 5


État 4

    0 $accept: Program $end .

    $défaut  accepter


État 5

    1 Program: tINT tID tOP . tCP Body

    tCP  décalage et aller à l'état 6


État 6

    1 Program: tINT tID tOP tCP . Body

    tOB  décalage et aller à l'état 7

    Body  aller à l'état 8


État 7

    2 Body: tOB . Content tCB

    tINT  décalage et aller à l'état 9
    tID   décalage et aller à l'état 10

    $défaut  réduction par utilisation de la règle 3 (Content)

    Content      aller à l'état 11
    Instruction  aller à l'état 12
    Declaration  aller à l'état 13
    Affectation  aller à l'état 14


État 8

    1 Program: tINT tID tOP tCP Body .

    $défaut  réduction par utilisation de la règle 1 (Program)


État 9

    7 Declaration: tINT . DecNext tSC

    tID  décalage et aller à l'état 15

    DecNext  aller à l'état 16


État 10

   12 Affectation: tID . tEQ Arith_Expr tSC

    tEQ  décalage et aller à l'état 17


État 11

    2 Body: tOB Content . tCB

    tCB  décalage et aller à l'état 18


État 12

    4 Content: Instruction . Content

    tINT  décalage et aller à l'état 9
    tID   décalage et aller à l'état 10

    $défaut  réduction par utilisation de la règle 3 (Content)

    Content      aller à l'état 19
    Instruction  aller à l'état 12
    Declaration  aller à l'état 13
    Affectation  aller à l'état 14


État 13

    5 Instruction: Declaration .

    $défaut  réduction par utilisation de la règle 5 (Instruction)


État 14

    6 Instruction: Affectation .

    $défaut  réduction par utilisation de la règle 6 (Instruction)


État 15

    8 DecNext: tID . tCOM DecNext
    9        | tID .
   11        | tID . tEQ $@1 Arith_Expr

    tCOM  décalage et aller à l'état 20
    tEQ   décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 9 (DecNext)


État 16

    7 Declaration: tINT DecNext . tSC

    tSC  décalage et aller à l'état 22


État 17

   12 Affectation: tID tEQ . Arith_Expr tSC

    tOP  décalage et aller à l'état 23
    tNB  décalage et aller à l'état 24
    tID  décalage et aller à l'état 25

    Arith_Expr  aller à l'état 26
    Factor      aller à l'état 27
    Term        aller à l'état 28


État 18

    2 Body: tOB Content tCB .

    $défaut  réduction par utilisation de la règle 2 (Body)


État 19

    4 Content: Instruction Content .

    $défaut  réduction par utilisation de la règle 4 (Content)


État 20

    8 DecNext: tID tCOM . DecNext

    tID  décalage et aller à l'état 15

    DecNext  aller à l'état 29


État 21

   11 DecNext: tID tEQ . $@1 Arith_Expr

    $défaut  réduction par utilisation de la règle 10 ($@1)

    $@1  aller à l'état 30


État 22

    7 Declaration: tINT DecNext tSC .

    $défaut  réduction par utilisation de la règle 7 (Declaration)


État 23

   21 Term: tOP . Arith_Expr tCP

    tOP  décalage et aller à l'état 23
    tNB  décalage et aller à l'état 24
    tID  décalage et aller à l'état 25

    Arith_Expr  aller à l'état 31
    Factor      aller à l'état 27
    Term        aller à l'état 28


État 24

   19 Term: tNB .

    $défaut  réduction par utilisation de la règle 19 (Term)


État 25

   20 Term: tID .

    $défaut  réduction par utilisation de la règle 20 (Term)


État 26

   12 Affectation: tID tEQ Arith_Expr . tSC
   14 Arith_Expr: Arith_Expr . tADD Factor
   15           | Arith_Expr . tSUB Factor

    tSC   décalage et aller à l'état 32
    tADD  décalage et aller à l'état 33
    tSUB  décalage et aller à l'état 34


État 27

   13 Arith_Expr: Factor .
   17 Factor: Factor . tMUL Term
   18       | Factor . tDIV Term

    tMUL  décalage et aller à l'état 35
    tDIV  décalage et aller à l'état 36

    $défaut  réduction par utilisation de la règle 13 (Arith_Expr)


État 28

   16 Factor: Term .

    $défaut  réduction par utilisation de la règle 16 (Factor)


État 29

    8 DecNext: tID tCOM DecNext .

    $défaut  réduction par utilisation de la règle 8 (DecNext)


État 30

   11 DecNext: tID tEQ $@1 . Arith_Expr

    tOP  décalage et aller à l'état 23
    tNB  décalage et aller à l'état 24
    tID  décalage et aller à l'état 25

    Arith_Expr  aller à l'état 37
    Factor      aller à l'état 27
    Term        aller à l'état 28


État 31

   14 Arith_Expr: Arith_Expr . tADD Factor
   15           | Arith_Expr . tSUB Factor
   21 Term: tOP Arith_Expr . tCP

    tCP   décalage et aller à l'état 38
    tADD  décalage et aller à l'état 33
    tSUB  décalage et aller à l'état 34


État 32

   12 Affectation: tID tEQ Arith_Expr tSC .

    $défaut  réduction par utilisation de la règle 12 (Affectation)


État 33

   14 Arith_Expr: Arith_Expr tADD . Factor

    tOP  décalage et aller à l'état 23
    tNB  décalage et aller à l'état 24
    tID  décalage et aller à l'état 25

    Factor  aller à l'état 39
    Term    aller à l'état 28


État 34

   15 Arith_Expr: Arith_Expr tSUB . Factor

    tOP  décalage et aller à l'état 23
    tNB  décalage et aller à l'état 24
    tID  décalage et aller à l'état 25

    Factor  aller à l'état 40
    Term    aller à l'état 28


État 35

   17 Factor: Factor tMUL . Term

    tOP  décalage et aller à l'état 23
    tNB  décalage et aller à l'état 24
    tID  décalage et aller à l'état 25

    Term  aller à l'état 41


État 36

   18 Factor: Factor tDIV . Term

    tOP  décalage et aller à l'état 23
    tNB  décalage et aller à l'état 24
    tID  décalage et aller à l'état 25

    Term  aller à l'état 42


État 37

   11 DecNext: tID tEQ $@1 Arith_Expr .
   14 Arith_Expr: Arith_Expr . tADD Factor
   15           | Arith_Expr . tSUB Factor

    tADD  décalage et aller à l'état 33
    tSUB  décalage et aller à l'état 34

    $défaut  réduction par utilisation de la règle 11 (DecNext)


État 38

   21 Term: tOP Arith_Expr tCP .

    $défaut  réduction par utilisation de la règle 21 (Term)


État 39

   14 Arith_Expr: Arith_Expr tADD Factor .
   17 Factor: Factor . tMUL Term
   18       | Factor . tDIV Term

    tMUL  décalage et aller à l'état 35
    tDIV  décalage et aller à l'état 36

    $défaut  réduction par utilisation de la règle 14 (Arith_Expr)


État 40

   15 Arith_Expr: Arith_Expr tSUB Factor .
   17 Factor: Factor . tMUL Term
   18       | Factor . tDIV Term

    tMUL  décalage et aller à l'état 35
    tDIV  décalage et aller à l'état 36

    $défaut  réduction par utilisation de la règle 15 (Arith_Expr)


État 41

   17 Factor: Factor tMUL Term .

    $défaut  réduction par utilisation de la règle 17 (Factor)


État 42

   18 Factor: Factor tDIV Term .

    $défaut  réduction par utilisation de la règle 18 (Factor)
